Hoàng Nhi - Thêm lưu cache message và danh sách thành viên nhóm vào redis và tối ưu tốc độ gửi tin nhắn trong Group
Changes
- Thêm lưu cache cho message và danh sách thành viên trong nhóm
- Tối ưu tốc độ gửi tin nhắn trong group
+ Trước khi tối ưu: 663.92ms
+ Sau khi tối ưu: 339.475ms (48.86%)

--- a/FE/Views/Home/Message/Group/PopupAddMember.cshtml
+++ b/FE/Views/Home/Message/Group/PopupAddMember.cshtml
@@ -393,7 +393,7 @@
                         ShowThongBaoThanhCong("Thêm thành viên vào nhóm thành công")
                         SendRequestWSRerenderTab(response.data.newMemberIds, "Conversation")
                         // Update lại tin nhắn mới nhất
-                        updateConversationLatestMessage(TargetId)
+                        updateConversationLatestMessage('@ViewBag.GroupId')
                         // Refresh lại trang
                         GetMessage(true)
                     } else if (response.data.invitedUserIds.length > 0) {
