--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -1,89 +1,93 @@
-﻿<!DOCTYPE html>
+﻿@inject IConfiguration Configuration
+@{
+    var beUrl = Configuration["BeURL"];
+}
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - LinkU</title>
-        <link rel="icon" type="image/x-icon" href="~/asset/Icon.png">
-        @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
-        <link rel="stylesheet" href="/css/DatePicker.css" />
-        <script src="https://kit.fontawesome.com/61ba0c914b.js" crossorigin="anonymous"></script>
-        <!-- Google Fonts And Icons -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-              rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL@20..48,400..700,0..1&icon_names=add_a_photo,group,group_add,left_panel_open,person,person_add&display=block" rel="stylesheet" />
-        <!-- MDB -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css"
-              rel="stylesheet" />
-        <!-- Jquery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <!-- Jquery UI -->
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
-        <!-- Jquery validate -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
-        <!-- Custom css -->
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/FullPalette.css" asp-append-version="true" />
-        <!-- Signalr -->
-        <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
-        <!-- Datepicker -->
-        <script type="text/javascript" src="/js/datepicker-vi.js"></script>
-        <!-- FilePond: Upload File-->
-        <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet" />
-        <!-- FilePond plugins CSS -->
-        <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div style="margin: 16px 0; padding: 0px 16px;">
-            @RenderBody()
-        </div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - LinkU</title>
+    <link rel="icon" type="image/x-icon" href="~/asset/Icon.png">
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
+    <link rel="stylesheet" href="/css/DatePicker.css" />
+    <script src="https://kit.fontawesome.com/61ba0c914b.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts And Icons -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+          rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL@20..48,400..700,0..1&icon_names=add_a_photo,group,group_add,left_panel_open,person,person_add&display=block" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.min.css"
+          rel="stylesheet" />
+    <!-- Jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Jquery UI -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+    <!-- Jquery validate -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
+    <!-- Custom css -->
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/FullPalette.css" asp-append-version="true" />
+    <!-- Signalr -->
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+    <!-- Datepicker -->
+    <script type="text/javascript" src="/js/datepicker-vi.js"></script>
+    <!-- FilePond: Upload File-->
+    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet" />
+    <!-- FilePond plugins CSS -->
+    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.css" rel="stylesheet" />
+</head>
+<body>
+    <div style="margin: 16px 0; padding: 0px 16px;">
+        @RenderBody()
+    </div>
 
-        @Html.Partial("~/Views/Shared/Modal/_ModalPartial.cshtml")
+    @Html.Partial("~/Views/Shared/Modal/_ModalPartial.cshtml")
 
-        <!-- Audio Notification -->
-        <audio id="notificationSound"
-               src="~/audio/notification.mp3"
-               preload="auto">
-        </audio>
-        <!-- Popover -->
-        <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- MDB -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.umd.min.js"></script>
-        <!-- Custom js -->
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        <!-- Script Show Loading -->
-        <script src="https://malsup.github.io/jquery.blockUI.js"></script>
-        <!-- File Upload -->
-        <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
-        <!-- FilePond plugins -->
-        <!-- Image Preview -->
-        <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js"></script>
-        <!-- Validate Size -->
-        <script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js"></script>
-        <!-- Validate Type -->
-        <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
-        <!-- Exif Orientation -->
-        <script src="https://unpkg.com/filepond-plugin-image-exif-orientation/dist/filepond-plugin-image-exif-orientation.js"></script>
-        <!-- Image Crop -->
-        <script src="https://unpkg.com/filepond-plugin-image-crop/dist/filepond-plugin-image-crop.js"></script>
-        <!-- Image Resize -->
-        <script src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
-        <!-- Image Transform -->
-        <script src="https://unpkg.com/filepond-plugin-image-transform/dist/filepond-plugin-image-transform.js"></script>
-        <!-- Image Encode -->
-        <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.min.js"></script>
-        @await RenderSectionAsync("Scripts", required: false)
-        @section Scripts {
-            <partial name="_ValidationScriptsPartial" />
-        }
+    <!-- Audio Notification -->
+    <audio id="notificationSound"
+           src="~/audio/notification.mp3"
+           preload="auto">
+    </audio>
+    <!-- Popover -->
+    <script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.1.0/mdb.umd.min.js"></script>
+    <!-- Custom js -->
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <!-- Script Show Loading -->
+    <script src="https://malsup.github.io/jquery.blockUI.js"></script>
+    <!-- File Upload -->
+    <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
+    <!-- FilePond plugins -->
+    <!-- Image Preview -->
+    <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js"></script>
+    <!-- Validate Size -->
+    <script src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js"></script>
+    <!-- Validate Type -->
+    <script src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
+    <!-- Exif Orientation -->
+    <script src="https://unpkg.com/filepond-plugin-image-exif-orientation/dist/filepond-plugin-image-exif-orientation.js"></script>
+    <!-- Image Crop -->
+    <script src="https://unpkg.com/filepond-plugin-image-crop/dist/filepond-plugin-image-crop.js"></script>
+    <!-- Image Resize -->
+    <script src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
+    <!-- Image Transform -->
+    <script src="https://unpkg.com/filepond-plugin-image-transform/dist/filepond-plugin-image-transform.js"></script>
+    <!-- Image Encode -->
+    <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 
     <script>
         // Kết nối tới Hub SignalR từ API
         const connection = new signalR.HubConnectionBuilder()
-                                    .withUrl('https://localhost:7181/messageHub?userid=@(User.Claims.FirstOrDefault(c => c.Type == "UserId").Value)') // URL API SignalR hub
+                                    .withUrl('@($"{beUrl}messageHub?userid={ViewContext.GetClaimValue("UserId")}")') // URL API SignalR hub
                                     .withAutomaticReconnect()
                                     .build();
 
@@ -342,7 +346,8 @@
                 }
 
                 // Xử lý khi Tab Message đã được tải
-                if (TargetId === response.data.data[0].senderId || TargetId === response.data.data[0].targetId) {
+                if ((TargetId === response.data.data[0].senderId && '@ViewContext.GetClaimValue("UserId")' === response.data.data[0].targetId)
+                    || TargetId === response.data.data[0].targetId) {
                     // Update lastread message cho người nhận
                     // Vì người gửi đã được cập nhật latest mesage lúc gửi tin nhắn
                     updateConversationLatestMessage(TargetId)
@@ -486,7 +491,7 @@
         });
     </script>
 
-        <script>
+    <script>
             // Chuyển giao diện nhắn tin với User hoặc nhóm
             function transToChatScreen(id, type = '0') {
                 event.stopPropagation(); // Ngăn sự kiện click lan lên div
@@ -556,9 +561,9 @@
                     }
                 });
             }
-        </script>
+    </script>
 
-        <script>
+    <script>
             let htmlBtnReactionType = '';
 
             function scrollToBottom() {
@@ -840,64 +845,64 @@
                     }
                 })
             }
-        </script>
+    </script>
 
-        <!-- Register plugins FilePond -->
-        <script>
-            FilePond.registerPlugin(
-                // encodes the file as base64 data
-                FilePondPluginFileEncode,
+    <!-- Register plugins FilePond -->
+    <script>
+        FilePond.registerPlugin(
+            // encodes the file as base64 data
+            FilePondPluginFileEncode,
 
-                // validates files based on input type
-                FilePondPluginFileValidateType,
+            // validates files based on input type
+            FilePondPluginFileValidateType,
 
-                // validates files base on input size
-                FilePondPluginFileValidateSize,
+            // validates files base on input size
+            FilePondPluginFileValidateSize,
 
-                // corrects mobile image orientation
-                FilePondPluginImageExifOrientation,
+            // corrects mobile image orientation
+            FilePondPluginImageExifOrientation,
 
-                // previews the image
-                FilePondPluginImagePreview,
+            // previews the image
+            FilePondPluginImagePreview,
 
-                // crops the image to a certain aspect ratio
-                FilePondPluginImageCrop,
+            // crops the image to a certain aspect ratio
+            FilePondPluginImageCrop,
 
-                // resizes the image to fit a certain size
-                FilePondPluginImageResize,
+            // resizes the image to fit a certain size
+            FilePondPluginImageResize,
 
-                // applies crop and resize information on the client
-                FilePondPluginImageTransform
-            );
+            // applies crop and resize information on the client
+            FilePondPluginImageTransform
+        );
 
-            const mimeToExt = {
-                'image/jpeg': 'jpg',
-                'image/png': 'png',
-                'image/gif': 'gif',
-                'video/mp4': 'mp4',
-                'application/pdf': 'pdf',
-            };
-        </script>
+        const mimeToExt = {
+            'image/jpeg': 'jpg',
+            'image/png': 'png',
+            'image/gif': 'gif',
+            'video/mp4': 'mp4',
+            'application/pdf': 'pdf',
+        };
+    </script>
 
-        <script>
-            let startTime = null;
-            let endTime = null;
+    <script>
+        let startTime = null;
+        let endTime = null;
 
-            function startTimer() {
-                startTime = performance.now();
-                console.log("⏱️ Bắt đầu đếm thời gian...");
+        function startTimer() {
+            startTime = performance.now();
+            console.log("⏱️ Bắt đầu đếm thời gian...");
+        }
+
+        function stopTimer() {
+            if (startTime === null) {
+                console.log("⚠️ Bạn chưa bắt đầu bấm giờ.");
+                return;
             }
-
-            function stopTimer() {
-                if (startTime === null) {
-                    console.log("⚠️ Bạn chưa bắt đầu bấm giờ.");
-                    return;
-                }
-                endTime = performance.now();
-                const elapsedTime = endTime - startTime;
-                console.log(`✅ Thời gian đã trôi qua: ${elapsedTime.toFixed(2)} ms`);
-                //startTime = null; // reset lại
-            }
-        </script>
-    </body>
+            endTime = performance.now();
+            const elapsedTime = endTime - startTime;
+            console.log(`✅ Thời gian đã trôi qua: ${elapsedTime.toFixed(2)} ms`);
+            //startTime = null; // reset lại
+        }
+    </script>
+</body>
 </html>
