--- a/FE/Views/Home/Contact/Group/_PopupCreateGroupPartial.cshtml
+++ b/FE/Views/Home/Contact/Group/_PopupCreateGroupPartial.cshtml
@@ -278,7 +278,8 @@
                         sanitize: false,
                         html: true,
                         content: `
-                            <div class="d-flex flex-column p-2">
+                            <div class="d-flex flex-column p-2"
+                            style="background-color: white; border-radius: 8px; box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;">
                                 <button type="button" class="btn btn-link text-black" onclick="ReplaceFile()"
                                         data-mdb-ripple-init
                                         data-mdb-ripple-color="dark"
