--- a/FE/Views/Shared/ConfigProfile/_UpdateProfilePartial.cshtml
+++ b/FE/Views/Shared/ConfigProfile/_UpdateProfilePartial.cshtml
@@ -74,7 +74,8 @@
             dateFormat: "dd-mm-yy",
             duration: "fast",
             changeMonth: true,
-            changeYear: true
+            changeYear: true,
+            yearRange: "-100:+0"
         });
 
         if ($("#DateOfBirth").val() === "") {
